force-app/main/default/objects/Live_Agent_Button__c/Live_Agent_Button__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains the configuration settings for each button.</description>
    <label>Live Agent Button</label>
</CustomObject>