force-app/main/default/objects/Live_Agent_Button__c/fields/Chat_Button_Id__c.field-meta.xml
<CustomField>
    <fullName>Chat_Button_Id__c</fullName>
    <description>Button Id for specific Chat</description>
    <label>Chat Button Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>