force-app/main/default/objects/Live_Agent_Button__c/fields/Chat_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Chat_Endpoint__c</fullName>
    <label>Chat Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>