force-app/main/default/objects/Live_Agent_Button__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>The name that is displayed on the buttons for the users to see.</description>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>