force-app/main/default/objects/Live_Agent_Button__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Chat_Button_Id__c</columns>
    <columns>Org_Id__c</columns>
    <columns>Chat_Deployment__c</columns>
    <columns>Chat_Endpoint__c</columns>
    <columns>Display_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>